# legion-new.rs

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md  rustfmt.toml
.run/: Interactive Test.run.xml  build wasi target.run.xml  build-wasi.sh  copy to npm.run.xml
projects/npx-create-rs/: Cargo.toml
projects/npx-create-rs/src/: lib.rs  main.rs
projects/npx-create-rs/src/commands/: mod.rs
projects/npx-create-rs/src/commands/cmd_build/: mod.rs  readme.md
projects/npx-create-rs/src/commands/cmd_decode/: mod.rs
projects/npx-create-rs/src/commands/cmd_encode/: mod.rs
projects/npx-create-rs/src/commands/cmd_polyfill/: mod.rs
projects/npx-create-rs/src/commands/cmd_run/: mod.rs
projects/npx-create-rs/src/errors/: convert.rs  mod.rs
projects/npx-create-rs/src/types/: jspm_type.rs  mod.rs  package_type.rs  project_type.rs
projects/npx-create-rs/tests/: readme.md
projects/npx-wasm32-wasi/: .gitignore  .npmignore  create-legion.js  legion-new.js  package.json
projects/npx-wasm32-wasi/src/: copyTemplate.js  index.d.ts
template/single/: package.json
