[package]
name = "legion-new"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Create new legion projects"
repository = "https://github.com/nyar-vm/valkyrie-valor"
documentation = "https://docs.rs/valor-config"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["socks"] }
#inquire = "0.7.5"
dialoguer = "0.11.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tempfile = { version = "3.16.0", features = ["nightly"] }

[dev-dependencies]

[features]
default = []

[package.metadata.component]
package = "legion:tools"
